# pytest-dynamic-report-names

./: .gitignore  README.md  TODO.md  pyproject.toml
src/pytest_dynamic_report_names/: plugin.py
