[project]
name = "pytest-dynamic-report-names"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pytest>=7",
]

[project.optional-dependencies]
dev = ["ruff~=0.8"]

[project.entry-points.pytest11]
pytest_dynamic_report_names = "pytest_dynamic_report_names.plugin"

[tool.pytest.ini_options]
addopts = "-vv --junit-xml=test-results/oh-no.xml"
